--- a/AadMultiApis/TestMultiApis/Pages/Shared/_Layout.cshtml
+++ b/AadMultiApis/TestMultiApis/Pages/Shared/_Layout.cshtml
@@ -23,7 +23,10 @@
                             <a class="nav-link text-dark" asp-area="" asp-page="/Index">Home</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-page="/CallApi">Call Web API</a>
+                            <a class="nav-link text-dark" asp-area="" asp-page="/DelegatedApi">DelegatedApi</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-page="/ApplicationApi">ApplicationApi</a>
                         </li>
                     </ul>
                 </div>
