Add fail use cases

--- a/AadMultiApis/TestMultiApis/Pages/Shared/_Layout.cshtml
+++ b/AadMultiApis/TestMultiApis/Pages/Shared/_Layout.cshtml
@@ -28,6 +28,12 @@
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-page="/ApplicationApi">ApplicationApi</a>
                         </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-page="/DelegatedFailApi">DelegatedFailApi</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-page="/ApplicationFailApi">ApplicationFailApi</a>
+                        </li>
                     </ul>
                 </div>
             </div>
