--- a/MultiIdentityProvider/RazorOpenIddictClient/Pages/Shared/_Layout.cshtml
+++ b/MultiIdentityProvider/RazorOpenIddictClient/Pages/Shared/_Layout.cshtml
@@ -24,7 +24,7 @@
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-page="/Privacy">Privacy</a>
                         </li>
-                        @if (Context.User.Identity.IsAuthenticated)
+                        @if (Context.User.Identity!.IsAuthenticated)
                         {
                             <li class="nav-item">
                                 <a class="nav-link text-dark" asp-area="" asp-page="/Logout">Logout</a>
@@ -52,7 +52,7 @@
 
     <footer class="border-top footer text-muted">
         <div class="container">
-            &copy; 2023 - RazorPageOidcClient - <a asp-area="" asp-page="/Privacy">Privacy</a>
+            &copy; 2023 - RazorPageOidcClient
         </div>
     </footer>
 
