--- a/AadMultiApis/TestMultiApis/Pages/Shared/_Layout.cshtml
+++ b/AadMultiApis/TestMultiApis/Pages/Shared/_Layout.cshtml
@@ -11,7 +11,7 @@
     <header>
         <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-white border-bottom box-shadow mb-3">
             <div class="container">
-                <a class="navbar-brand" asp-area="" asp-page="/Index">Razor AAD</a>
+                <a class="navbar-brand" asp-area="" asp-page="/Index">Razor Microsoft Entra ID</a>
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target=".navbar-collapse" aria-controls="navbarSupportedContent"
                         aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
@@ -44,7 +44,7 @@
 
     <footer class="border-top footer text-muted">
         <div class="container">
-            &copy; 2023 - RazorAzureAD
+            &copy; 2023 - Razor Microsoft Entra ID
         </div>
     </footer>
 
