--- a/MultiIdentityProvider/RazorMicrosoftEntraIDClient/Pages/CallApi.cshtml
+++ b/MultiIdentityProvider/RazorMicrosoftEntraIDClient/Pages/CallApi.cshtml
@@ -1,5 +1,5 @@
 ﻿@page
-@model RazorAzureAD.Pages.CallApiModel
+@model RazorMicrosoftEntraID.Pages.CallApiModel
 @{
     ViewData["Title"] = "CallApi";
     Layout = "~/Pages/Shared/_Layout.cshtml";
