MICROSOFT_ENTRA_ID

--- a/MicrosoftEntraIDMultiApis/TestMultiApis/Pages/ApplicationApi.cshtml
+++ b/MicrosoftEntraIDMultiApis/TestMultiApis/Pages/ApplicationApi.cshtml
@@ -1,5 +1,5 @@
 ﻿@page
-@model RazorAzureAD.Pages.ApplicationApiModel
+@model RazorMicrosoftEntraID.Pages.ApplicationApiModel
 @{
     ViewData["Title"] = "ApplicationApi";
     Layout = "~/Pages/Shared/_Layout.cshtml";
