--- a/MicrosoftEntraIDMultiApis/TestMultiApis/Pages/ApplicationFailApi.cshtml
+++ b/MicrosoftEntraIDMultiApis/TestMultiApis/Pages/ApplicationFailApi.cshtml
@@ -1,5 +1,5 @@
 ﻿@page
-@model RazorAzureAD.Pages.ApplicationFailApiModel
+@model RazorMicrosoftEntraID.Pages.ApplicationFailApiModel
 @{
     ViewData["Title"] = "ApplicationFailApi";
     Layout = "~/Pages/Shared/_Layout.cshtml";
