--- a/MicrosoftEntraIDMultiApis/TestMultiApis/Pages/DelegatedApi.cshtml
+++ b/MicrosoftEntraIDMultiApis/TestMultiApis/Pages/DelegatedApi.cshtml
@@ -1,5 +1,5 @@
 ﻿@page
-@model RazorAzureAD.Pages.DelegatedApiModel
+@model RazorMicrosoftEntraID.Pages.DelegatedApiModel
 @{
     ViewData["Title"] = "DelegatedApi";
     Layout = "~/Pages/Shared/_Layout.cshtml";
