--- a/MicrosoftEntraIDMultiApis/TestMultiApis/Pages/DelegatedFailApi.cshtml
+++ b/MicrosoftEntraIDMultiApis/TestMultiApis/Pages/DelegatedFailApi.cshtml
@@ -1,5 +1,5 @@
 ﻿@page
-@model RazorAzureAD.Pages.DelegatedFailApiModel
+@model RazorMicrosoftEntraID.Pages.DelegatedFailApiModel
 @{
     ViewData["Title"] = "DelegatedFailApi";
     Layout = "~/Pages/Shared/_Layout.cshtml";
