--- a/MicrosoftEntraIDMultiApis/TestMultiApis/Pages/_ViewImports.cshtml
+++ b/MicrosoftEntraIDMultiApis/TestMultiApis/Pages/_ViewImports.cshtml
@@ -1,4 +1,4 @@
-@using RazorAzureAD
+@using RazorMicrosoftEntraID
 @using NetEscapades.AspNetCore.SecurityHeaders
-@namespace RazorAzureAD.Pages
+@namespace RazorMicrosoftEntraID.Pages
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
