--- a/MultiIdentityProvider/RazorAuth0Client/Pages/Shared/_Layout.cshtml
+++ b/MultiIdentityProvider/RazorAuth0Client/Pages/Shared/_Layout.cshtml
@@ -6,6 +6,7 @@
     <title>@ViewData["Title"] - Razor Auth0</title>
     <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
     <link rel="stylesheet" href="~/css/site.css" />
+    <link rel="stylesheet" href="~/RazorAuth0Client.styles.css" asp-append-version="true" />
 </head>
 <body>
     <header>
