--- a/MultiIdentityProvider/RazorMicrosoftEntraIDClient/Pages/Shared/_Layout.cshtml
+++ b/MultiIdentityProvider/RazorMicrosoftEntraIDClient/Pages/Shared/_Layout.cshtml
@@ -6,6 +6,7 @@
     <title>@ViewData["Title"] - Razor Microsoft Entra ID</title>
     <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
     <link rel="stylesheet" href="~/css/site.css" />
+    <link rel="stylesheet" href="~/RazorMicrosoftEntraIDClient.styles.css" asp-append-version="true" />
 </head>
 <body>
     <header>
