--- a/MultiIdentityProvider/IdentityProvider/Views/Shared/_Layout.cshtml
+++ b/MultiIdentityProvider/IdentityProvider/Views/Shared/_Layout.cshtml
@@ -45,7 +45,7 @@
         </div>
     </footer>
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
-    <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="~/lib/bootstrap/dist/js/bootstrap.min.js"></script>
 
     <script src="~/js/site.js" asp-append-version="true"></script>
 
