--- a/MultiIdentityProvider/RazorMicrosoftEntraIDClient/Pages/Shared/_Layout.cshtml
+++ b/MultiIdentityProvider/RazorMicrosoftEntraIDClient/Pages/Shared/_Layout.cshtml
@@ -45,7 +45,7 @@
 
      @{var nonce = Context.GetNonce();}
     <script src="~/lib/jquery/dist/jquery.min.js" nonce="@nonce"></script>
-    <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js" nonce="@nonce"></script>
+    <script src="~/lib/bootstrap/dist/js/bootstrap.min.js" nonce="@nonce"></script>
     <script src="~/js/site.js" asp-append-version="true" nonce="@nonce"></script>
 
     @await RenderSectionAsync("Scripts", required: false)
