--- a/MicrosoftEntraIDMultiApis/TestMultiApis/Pages/DelegatedFailApi.cshtml
+++ b/MicrosoftEntraIDMultiApis/TestMultiApis/Pages/DelegatedFailApi.cshtml
@@ -6,7 +6,7 @@
 }
 
 <h1>Call Delegated Fail to multi Api</h1>
-<h6>gets the data from the Azure AD protected Web API</h6>
+<h6>gets the data from the Microsoft Entra ID protected Web API</h6>
 
 @foreach(var item in Model.DataFromApi)
 {
